--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">AttendanceKt</string>
+    <string name="server_url">ws://spring-stomp-simple-chat.apps.us-east-1.starter.openshift-online.com/ws-chat</string>
+
+    <string name="chat_info_join">%s Join</string>
+    <string name="chat_info_leave">%s Leave</string>
 </resources>
